# gha-test-py

./: README.md  pyproject.toml
.github/workflows/: coverage.yml  static.yml  test.yml  type.yml
src/gha/: __init__.py
tests/: test_gha.py
