[tool.poetry]
name = "gha-test-py"
version = "0.1.0"
description = ""
authors = ["Ryuichi OHORI"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
coverage = "^5.5"
mypy = "^0.812"
pylint = "^2.8.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
